exports[`test renders ./components/grid/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-row">
    <div
      class="ant-col-12">
      col-12
    </div>
    <div
      class="ant-col-12">
      col-12
    </div>
  </div>
  <div
    class="ant-row">
    <div
      class="ant-col-8">
      col-8
    </div>
    <div
      class="ant-col-8">
      col-8
    </div>
    <div
      class="ant-col-8">
      col-8
    </div>
  </div>
  <div
    class="ant-row">
    <div
      class="ant-col-6">
      col-6
    </div>
    <div
      class="ant-col-6">
      col-6
    </div>
    <div
      class="ant-col-6">
      col-6
    </div>
    <div
      class="ant-col-6">
      col-6
    </div>
  </div>
</div>
`;

exports[`test renders ./components/grid/demo/flex.md correctly 1`] = `
<div>
  <p>
    sub-element align left
  </p>
  <div
    class="ant-row-flex ant-row-flex-start">
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
  </div>
  <p>
    sub-element align center
  </p>
  <div
    class="ant-row-flex ant-row-flex-center">
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
  </div>
  <p>
    sub-element align right
  </p>
  <div
    class="ant-row-flex ant-row-flex-end">
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
  </div>
  <p>
    sub-element monospaced arrangement
  </p>
  <div
    class="ant-row-flex ant-row-flex-space-between">
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
  </div>
  <p>
    sub-element align full
  </p>
  <div
    class="ant-row-flex ant-row-flex-space-around">
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
    <div
      class="ant-col-4">
      col-4
    </div>
  </div>
</div>
`;

exports[`test renders ./components/grid/demo/flex-align.md correctly 1`] = `
<div>
  <p>
    Align Top
  </p>
  <div
    class="ant-row-flex ant-row-flex-center ant-row-flex-top">
    <div
      class="ant-col-4">
      <p
        class="height-100">
        col-4
      </p>
    </div>
    <div
      class="ant-col-4">
      <p
        class="height-50">
        col-4
      </p>
    </div>
    <div
      class="ant-col-4">
      <p
        class="height-120">
        col-4
      </p>
    </div>
    <div
      class="ant-col-4">
      <p
        class="height-80">
        col-4
      </p>
    </div>
  </div>
  <p>
    Align Center
  </p>
  <div
    class="ant-row-flex ant-row-flex-space-around ant-row-flex-middle">
    <div
      class="ant-col-4">
      <p
        class="height-100">
        col-4
      </p>
    </div>
    <div
      class="ant-col-4">
      <p
        class="height-50">
        col-4
      </p>
    </div>
    <div
      class="ant-col-4">
      <p
        class="height-120">
        col-4
      </p>
    </div>
    <div
      class="ant-col-4">
      <p
        class="height-80">
        col-4
      </p>
    </div>
  </div>
  <p>
    Align Bottom
  </p>
  <div
    class="ant-row-flex ant-row-flex-space-between ant-row-flex-bottom">
    <div
      class="ant-col-4">
      <p
        class="height-100">
        col-4
      </p>
    </div>
    <div
      class="ant-col-4">
      <p
        class="height-50">
        col-4
      </p>
    </div>
    <div
      class="ant-col-4">
      <p
        class="height-120">
        col-4
      </p>
    </div>
    <div
      class="ant-col-4">
      <p
        class="height-80">
        col-4
      </p>
    </div>
  </div>
</div>
`;

exports[`test renders ./components/grid/demo/flex-order.md correctly 1`] = `
<div>
  <div
    class="ant-row-flex">
    <div
      class="ant-col-6 ant-col-order-4">
      1 col-order-4
    </div>
    <div
      class="ant-col-6 ant-col-order-3">
      2 col-order-3
    </div>
    <div
      class="ant-col-6 ant-col-order-2">
      3 col-order-2
    </div>
    <div
      class="ant-col-6 ant-col-order-1">
      4 col-order-1
    </div>
  </div>
</div>
`;

exports[`test renders ./components/grid/demo/gutter.md correctly 1`] = `
<div
  class="gutter-example">
  <div
    class="ant-row"
    style="margin-left:-8px;margin-right:-8px;">
    <div
      class="ant-col-6 gutter-row"
      style="padding-left:8px;padding-right:8px;">
      <div
        class="gutter-box">
        col-6
      </div>
    </div>
    <div
      class="ant-col-6 gutter-row"
      style="padding-left:8px;padding-right:8px;">
      <div
        class="gutter-box">
        col-6
      </div>
    </div>
    <div
      class="ant-col-6 gutter-row"
      style="padding-left:8px;padding-right:8px;">
      <div
        class="gutter-box">
        col-6
      </div>
    </div>
    <div
      class="ant-col-6 gutter-row"
      style="padding-left:8px;padding-right:8px;">
      <div
        class="gutter-box">
        col-6
      </div>
    </div>
  </div>
</div>
`;

exports[`test renders ./components/grid/demo/offset.md correctly 1`] = `
<div>
  <div
    class="ant-row">
    <div
      class="ant-col-8">
      col-8
    </div>
    <div
      class="ant-col-8 ant-col-offset-8">
      col-8
    </div>
  </div>
  <div
    class="ant-row">
    <div
      class="ant-col-6 ant-col-offset-6">
      col-6 col-offset-6
    </div>
    <div
      class="ant-col-6 ant-col-offset-6">
      col-6 col-offset-6
    </div>
  </div>
  <div
    class="ant-row">
    <div
      class="ant-col-12 ant-col-offset-6">
      col-12 col-offset-6
    </div>
  </div>
</div>
`;

exports[`test renders ./components/grid/demo/reponsive.md correctly 1`] = `
<div
  class="ant-row">
  <div
    class="ant-col-xs-2 ant-col-sm-4 ant-col-md-6 ant-col-lg-8">
    Col
  </div>
  <div
    class="ant-col-xs-20 ant-col-sm-16 ant-col-md-12 ant-col-lg-8">
    Col
  </div>
  <div
    class="ant-col-xs-2 ant-col-sm-4 ant-col-md-6 ant-col-lg-8">
    Col
  </div>
</div>
`;

exports[`test renders ./components/grid/demo/reponsive-more.md correctly 1`] = `
<div
  class="ant-row">
  <div
    class="ant-col-xs-5 ant-col-xs-offset-1 ant-col-lg-6 ant-col-lg-offset-2">
    Col
  </div>
  <div
    class="ant-col-xs-11 ant-col-xs-offset-1 ant-col-lg-6 ant-col-lg-offset-2">
    Col
  </div>
  <div
    class="ant-col-xs-5 ant-col-xs-offset-1 ant-col-lg-6 ant-col-lg-offset-2">
    Col
  </div>
</div>
`;

exports[`test renders ./components/grid/demo/sort.md correctly 1`] = `
<div>
  <div
    class="ant-row">
    <div
      class="ant-col-18 ant-col-push-6">
      col-18 col-push-6
    </div>
    <div
      class="ant-col-6 ant-col-pull-18">
      col-6 col-pull-18
    </div>
  </div>
</div>
`;
